<?xml version="1.0" encoding="utf-8"?>
<!--
 * Wapdroid - Android Location based Wifi Manager
 * Copyright (C) 2009 Bryan Emmanuel
 * 
 * This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.

 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *  
 *  Bryan Emmanuel piusvelte@gmail.com
-->
<resources>
    <string name="app_name">Wapdroid</string>
    <string name="label_CID">Cell:</string>
    <string name="label_LAC">Location:</string>
    <string name="label_MNC">Carrier:</string>
    <string name="label_MCC">Country:</string>
    <string name="label_WIFI">Wi-Fi</string>
    <string name="label_wapdroidState">Manage Wi-Fi</string>
    <string name="no_networks">no networks</string>
    <string name="no_cells">no cells</string>
    <string name="menu_manageNetworks">Manage networks</string>
    <string name="menu_manageCells">Manage cells</string>
    <string name="menu_deleteNetwork">Forget network</string>
    <string name="menu_deleteCell">Forget cell</string>
    <string name="menu_refreshNetworks">Refresh networks</string>
    <string name="menu_refreshCells">Refresh cells</string>
    <string name="label_disabled">disabled</string>
    <string name="label_enabled">enabled</string>
    <string name="label_disabling">disabling</string>
    <string name="label_enabling">enabling</string>
    <string name="label_notify">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="label_vibrate">Vibrate</string>
    <string name="label_led">LED</string>
    <string name="label_ringtone">Ringtone</string>
    <string name="label_save">Save</string>
    <string name="label_BSSID">BSSID:\u0020</string>
    <string name="label_interval">Background Interval</string>
    <string name="scanning">scanning</string>
    <string name="label_about">About</string>
    <string name="label_donate">Donate</string>
    <string name="menu_filter">Filter</string>
    <string name="status">Status:</string>
    <string name="withinarea">within area</string>
    <string name="outofarea">out of area</string>
    <string name="loading">Loading...</string>
    <string name="range">Range:</string>
    <string name="dbm">\u0020dBm</string>
    <string name="colon">\u0020:\u0020</string>
    <string name="signal">Signal:</string>
    <string name="battery_remaining">Battery:</string>
    <string name="battery_override">No WiFi on low battery</string>
    <string name="battery_percentage">Battery percentage</string>
    <string name="connected">connected</string>
    <string name="unknown">unknown</string>
    <string name="map_network">Map network</string>
    <string name="map_cell">Map cell</string>
    <string name="linefeed">\u000A</string>
    <string name="close">Close</string>
    <string name="pref_service">Service Settings</string>
    <string name="pref_notifications">Notification Settings</string>
    <string name="pref_battery">Battery Settings</string>
    <string name="label_persistent_status">Always show icon in status bar</string>
    <string name="cellwarning">Multiple cells may share the same location.\u000A</string>
    <string name="background_info">When Wapdroid is managing Wi-Fi, use the Wi-Fi button found in the Menu options in Wapdroid to temporarily override control.\u000A\u000AWapdroid responds best when\u000AWi-Fi sleep policy is set to Never, found under Android Settings, Wireless \u0026 networks, Wi-Fi settings, Menu button, Advanced.</string>
    <string name="service_info">To automatically manage Wi-Fi, the service must be enabled in the Wapdroid Settings, but pressing menu, then Settings, then checking Manage Wi-Fi.</string>
    <string name="about">Wapdroid runs in the background, recording cell towers near WiFi networks to which you connect. When in range of those towers, WiFi is turned on, otherwise it is turned off to save battery power. Please report issues or questions to http://wapdroid.com.\u000A\u000A</string>
    <string name="gpl">Wapdroid - Android Location based Wifi Manager\u000A\u000ACopyright (C) 2009 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
    <string name="sql_equalsvalue">%s=%s</string>
    <string name="sql_equalsquotedvalue">%s=\u0022%s\u0022</string>
    <string name="sql_fetchnetwork">%s=\u0022%s\u0022 and (%s=\u0022%s\u0022 or %s=\u0022\u0022)</string>
    <string name="sql_fetchcell">%s and (%s or %s)</string>
    <string name="sql_fetchpair">%s and %s</string>
    <string name="sql_fetchrange">%s=%s and (%s=%s or %s=%s)</string>
    <string name="sql_fetchrangewithrssi">%s and (((%s) or (%s\u003C=%s)) and (%s\u003E=%s))</string>
    <string name="sql_cells_and"> and ((%s and (%s or %s))</string>
    <string name="sql_cells_or"> or (%s=%s and (%s=%s or %s=%s))</string>
</resources>
