<?xml version="1.0" encoding="utf-8"?>
<!--
 * Wapdroid - Android Location based Wifi Manager
 * Copyright (C) 2009 Bryan Emmanuel
 * 
 * This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *  
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.

 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *  
 *  Bryan Emmanuel piusvelte@gmail.com
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@color/background"
	android:padding="4dip">
	<TableLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@drawable/field"
		android:stretchColumns="0"
		android:paddingTop="10dip"
		android:paddingRight="12dip"
		android:paddingBottom="10dip"
		android:paddingLeft="12dip">
		<TableRow>
			<TextView android:textColor="@color/text_primary"
				android:text="@string/label_CID"/>
			<TextView android:id="@+id/cell_row_CID"
				android:textStyle="bold"
				android:textColor="@color/text_primary"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView android:textColor="@color/text_primary"
				android:text="@string/label_LAC"/>
			<TextView android:id="@+id/cell_row_LAC"
				android:textColor="@color/text_primary"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView android:textColor="@color/text_primary"
				android:text="@string/range"/>
			<TextView android:id="@+id/cell_row_range"
				android:textColor="@color/text_primary"
				android:gravity="right"/>
		</TableRow>
		<TableRow>
			<TextView android:textColor="@color/text_primary"
				android:text="@string/status"/>
			<TextView android:id="@+id/cell_row_status"
				android:textColor="@color/text_primary"
				android:gravity="right"/>
		</TableRow>
	</TableLayout>
</LinearLayout>